Compile declared provider sources in candidate checks